--- a/AcrlSync/UploadView.xaml
+++ b/AcrlSync/UploadView.xaml
@@ -6,8 +6,49 @@
         xmlns:ignore="http://www.galasoft.ch/ignore"
         mc:Ignorable="d ignore"
         Title="ACRL Sync &#x2013; Upload skin"
-        DataContext="{Binding ViewModelName, Source={StaticResource Locator}}">
+        DataContext="{Binding uploadVM, Source={StaticResource Locator}}">
 
-    <Grid>
-    </Grid>
+    <DockPanel LastChildFill="True" Margin="15 10">
+        <Grid DockPanel.Dock="Top">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="50"/>
+                <ColumnDefinition Width="*" MinWidth="150" MaxWidth="400"/>
+                <ColumnDefinition Width="80"/>
+                <ColumnDefinition Width="1.3*"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0" Grid.Row="0" FontWeight="Bold" Text="Series" VerticalAlignment="Center"/>
+            <ComboBox Grid.Column="1" Grid.Row="0" ItemsSource="{Binding seriesList}" SelectedItem="{Binding selectedSeries}">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock>
+                            <TextBlock.Text>
+                                <MultiBinding StringFormat="{}{0} &#x2013; {1}">
+                                    <Binding Path="Parent"/>
+                                    <Binding Path="Name"/>
+                                </MultiBinding>
+                            </TextBlock.Text>
+                        </TextBlock>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+
+
+            <TextBlock Grid.Column="0" Grid.Row="1" FontWeight="Bold" Margin="0 10 0 0" Text="Car" VerticalAlignment="Center"/>
+            <ComboBox Grid.Column="1" Grid.Row="1" Margin="0 10 0 0" ItemsSource="{Binding carList}" DisplayMemberPath="Name"  IsEnabled="{Binding carEnabled}" SelectedItem="{Binding selectedCar}"/>
+
+            <TextBlock Grid.Column="0" Grid.Row="2" FontWeight="Bold" Margin="0 10 0 0" Text="Skin" VerticalAlignment="Center"/>
+            <ComboBox Grid.Column="1" Grid.Row="2" Margin="0 10 0 0" ItemsSource="{Binding skinList}" IsEnabled="{Binding skinEnabled}"  SelectedItem="{Binding selectedSkin}" DisplayMemberPath="Name"/>
+
+            <Button Grid.Column="2" Grid.Row="2" Margin="10 10 0 0" Content="_Evaluate" Command="{Binding evaluateClick}" IsEnabled="{Binding evaluateAllowed}"/>
+        </Grid>
+        <DataGrid ItemsSource="{Binding filesToUpload}" AutoGenerateColumns="True"/>
+        <Grid>
+            
+        </Grid>
+    </DockPanel>
 </Window>
