--- a/AcrlSync/UploadView.xaml
+++ b/AcrlSync/UploadView.xaml
@@ -6,8 +6,30 @@
         xmlns:ignore="http://www.galasoft.ch/ignore"
         mc:Ignorable="d ignore"
         Title="ACRL Sync &#x2013; Upload skin"
-        DataContext="{Binding uploadVM, Source={StaticResource Locator}}">
+        Width="720"
+        MinWidth="720"
+        Height="480"
+        MinHeight="240"
+        DataContext="{Binding uploadVM, Source={StaticResource Locator}}"
+        xmlns:local="clr-namespace:AcrlSync"
+        >
 
+    <Window.Resources>
+        <local:DecorationConverter x:Key="DecCon"/>
+        <local:ColorConverter x:Key="ColCon"/>
+        <local:TransferConverter x:Key="TranCon"/>
+    </Window.Resources>
+
+    <Window.Style>
+        <Style TargetType="Window">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding ftpLoaded}" Value="False">
+                    <Setter Property="Cursor" Value="Wait" />
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Style>
+    
     <DockPanel LastChildFill="True" Margin="15 10">
         <Grid DockPanel.Dock="Top">
             <Grid.RowDefinitions>
@@ -44,11 +66,85 @@
             <TextBlock Grid.Column="0" Grid.Row="2" FontWeight="Bold" Margin="0 10 0 0" Text="Skin" VerticalAlignment="Center"/>
             <ComboBox Grid.Column="1" Grid.Row="2" Margin="0 10 0 0" ItemsSource="{Binding skinList}" IsEnabled="{Binding skinEnabled}"  SelectedItem="{Binding selectedSkin}" DisplayMemberPath="Name"/>
 
-            <Button Grid.Column="2" Grid.Row="2" Margin="10 10 0 0" Content="_Evaluate" Command="{Binding evaluateClick}" IsEnabled="{Binding evaluateAllowed}"/>
+            <!--<Button Grid.Column="2" Grid.Row="2" Margin="10 10 0 0" Content="_Evaluate" Command="{Binding evaluateClick}" IsEnabled="{Binding evaluateAllowed}"/>-->
+
+            <WrapPanel Grid.Column="3">
+                <TextBlock Text="Don't forget to fill in the "/>
+                <TextBlock><Hyperlink RequestNavigate="Hyperlink_RequestNavigate" NavigateUri="https://docs.google.com/spreadsheets/d/18_bMvGwkKSknSZeG3RhXi1_9qLzeY2STh0aIMaMficg/edit?usp=sharing">skins spreadsheet</Hyperlink></TextBlock>
+            </WrapPanel>
+
+            <StackPanel Grid.Column="3" Grid.Row="1" Grid.RowSpan="2">
+                <TextBlock Text="DDS File rules"/>
+                <BulletDecorator Margin="5 0">
+                    <BulletDecorator.Bullet>
+                        <Ellipse Height="5" Width="5" Fill="Black"/>
+                    </BulletDecorator.Bullet>
+                    <TextBlock Text="Files must be less than 10 MB"  Margin="5 -1"/>
+                </BulletDecorator>
+                <BulletDecorator Margin="5 0">
+                    <BulletDecorator.Bullet>
+                        <Ellipse Height="5" Width="5" Fill="Black"/>
+                    </BulletDecorator.Bullet>
+                    <TextBlock Text="Files must not exceed 2048 px in either dimension" Margin="5 -1"/>
+                </BulletDecorator>
+            </StackPanel>
         </Grid>
-        <DataGrid ItemsSource="{Binding filesToUpload}" AutoGenerateColumns="True"/>
-        <Grid>
-            
+        
+        <Grid DockPanel.Dock="Bottom" Margin="0 10 0 0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="80"/>
+                <ColumnDefinition Width="*" MinWidth="5"/>
+                <ColumnDefinition Width="80"/>
+            </Grid.ColumnDefinitions>
+            <Button Grid.Column="0"  Margin="0 0 10 0" Content="Back" Click="Button_Click"/>
+            <Button Grid.Column="2" Margin="10 0 0 0" Content="Upload" Command="{Binding uploadClick}" IsEnabled="{Binding uploadEnabled}"/>
         </Grid>
+        
+        <Grid Margin="0 10 0 0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Row="0" Grid.Column="0" Text="Skin Files" FontWeight="Bold"/>
+            <ListView Grid.Column="0" Grid.Row="1" Margin="0 0 5 0" HorizontalContentAlignment="Stretch" ItemsSource="{Binding filesToUpload}" Grid.IsSharedSizeScope="True">
+                <!--<ListView.Resources>
+                    <Style TargetType="GridViewColumnHeader">
+                        <Setter Property="Visibility" Value="Collapsed" />
+                    </Style>
+                </ListView.Resources>
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Width="Auto" DisplayMemberBinding="{Binding name}"/>
+                        <GridViewColumn Width="Auto" DisplayMemberBinding="{Binding error}"/>
+                    </GridView>
+                </ListView.View>-->
+                <ListView.ItemTemplate >
+                    <DataTemplate>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition SharedSizeGroup="col_A"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Column="0" Text="{Binding name}" TextDecorations="{Binding valid, Converter={StaticResource DecCon}}" Foreground="{Binding missing, Converter={StaticResource ColCon}}"/>
+                            <TextBlock Grid.Column="1" Text="{Binding error}" Margin="50 0"/>
+                            <WrapPanel Grid.Column="2" HorizontalAlignment="Right" Visibility="{Binding transferable, Converter={StaticResource TranCon}}">
+                                <TextBlock  Text="Upload: "/>
+                                <CheckBox  IsChecked="{Binding transfer}"/>
+                            </WrapPanel>
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+            <TextBlock Margin="5 0 0 0" Grid.Row="0" Grid.Column="1" Text="Log" FontWeight="Bold"/>
+            <local:ScrollingTextBox Grid.Row="1" Grid.Column="1" Margin="5 0 0 0" IsReadOnly="True" VerticalScrollBarVisibility="Visible" FontFamily="Consolas" TextWrapping="Wrap" Text="{Binding log, UpdateSourceTrigger=PropertyChanged}"/>
+        </Grid>
+
+        
     </DockPanel>
+
 </Window>
