--- a/AcrlSync/UploadView.xaml
+++ b/AcrlSync/UploadView.xaml
@@ -1,34 +1,29 @@
-﻿<Window x:Class="AcrlSync.UploadView"
+﻿<UserControl x:Class="AcrlSync.UploadView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:ignore="http://www.galasoft.ch/ignore"
         mc:Ignorable="d ignore"
-        Title="ACRL Sync &#x2013; Upload skin"
-        Width="720"
-        MinWidth="720"
-        Height="480"
-        MinHeight="240"
         DataContext="{Binding uploadVM, Source={StaticResource Locator}}"
         xmlns:local="clr-namespace:AcrlSync"
         >
 
-    <Window.Resources>
+    <UserControl.Resources>
         <local:DecorationConverter x:Key="DecCon"/>
         <local:ColorConverter x:Key="ColCon"/>
         <local:TransferConverter x:Key="TranCon"/>
-    </Window.Resources>
+    </UserControl.Resources>
 
-    <Window.Style>
-        <Style TargetType="Window">
+    <UserControl.Style>
+        <Style TargetType="UserControl">
             <Style.Triggers>
                 <DataTrigger Binding="{Binding ftpLoaded}" Value="False">
                     <Setter Property="Cursor" Value="Wait" />
                 </DataTrigger>
             </Style.Triggers>
         </Style>
-    </Window.Style>
+    </UserControl.Style>
     
     <DockPanel LastChildFill="True" Margin="15 10">
         <Grid DockPanel.Dock="Top">
@@ -61,10 +56,10 @@
 
 
             <TextBlock Grid.Column="0" Grid.Row="1" FontWeight="Bold" Margin="0 10 0 0" Text="Car" VerticalAlignment="Center"/>
-            <ComboBox Grid.Column="1" Grid.Row="1" Margin="0 10 0 0" ItemsSource="{Binding carList}" DisplayMemberPath="Name"  IsEnabled="{Binding carEnabled}" SelectedItem="{Binding selectedCar}"/>
+            <ComboBox Grid.Column="1" Grid.Row="1" Margin="0 10 0 0" ItemsSource="{Binding carList}" DisplayMemberPath="Name" SelectedItem="{Binding selectedCar}"/>
 
             <TextBlock Grid.Column="0" Grid.Row="2" FontWeight="Bold" Margin="0 10 0 0" Text="Skin" VerticalAlignment="Center"/>
-            <ComboBox Grid.Column="1" Grid.Row="2" Margin="0 10 0 0" ItemsSource="{Binding skinList}" IsEnabled="{Binding skinEnabled}"  SelectedItem="{Binding selectedSkin}" DisplayMemberPath="Name"/>
+            <ComboBox Grid.Column="1" Grid.Row="2" Margin="0 10 0 0" ItemsSource="{Binding skinList}"  SelectedItem="{Binding selectedSkin}" DisplayMemberPath="Name"/>
 
             <!--<Button Grid.Column="2" Grid.Row="2" Margin="10 10 0 0" Content="_Evaluate" Command="{Binding evaluateClick}" IsEnabled="{Binding evaluateAllowed}"/>-->
 
@@ -96,7 +91,7 @@
                 <ColumnDefinition Width="*" MinWidth="5"/>
                 <ColumnDefinition Width="80"/>
             </Grid.ColumnDefinitions>
-            <Button Grid.Column="0"  Margin="0 0 10 0" Content="Back" Click="Button_Click"/>
+            <Button Grid.Column="0"  Margin="0 0 10 0" Content="Back" Command="{Binding backClick}"/>
             <Button Grid.Column="2" Margin="10 0 0 0" Content="Upload" Command="{Binding uploadClick}" IsEnabled="{Binding uploadEnabled}"/>
         </Grid>
         
@@ -147,4 +142,4 @@
         
     </DockPanel>
 
-</Window>
+</UserControl>
