--- a/AcrlSync/DownloadView.xaml
+++ b/AcrlSync/DownloadView.xaml
@@ -6,12 +6,12 @@
         xmlns:ignore="http://www.galasoft.ch/ignore"
         mc:Ignorable="d ignore"
         xmlns:local="clr-namespace:AcrlSync"
-        DataContext="{Binding downloadVM, Source={StaticResource Locator}}">
+        DataContext="{Binding DownloadVM, Source={StaticResource Locator}}">
 
     <UserControl.Style>
         <Style TargetType="UserControl">
             <Style.Triggers>
-                <DataTrigger Binding="{Binding ftpLoaded}" Value="False">
+                <DataTrigger Binding="{Binding FtpLoaded}" Value="False">
                     <Setter Property="Cursor" Value="Wait" />
                 </DataTrigger>
             </Style.Triggers>
@@ -35,40 +35,50 @@
                     <ColumnDefinition Width="80"/>
                 </Grid.ColumnDefinitions>
                 <TextBlock Grid.Column="0" Grid.Row="0" FontWeight="Bold" Text="FTP Address"/>
-                <TextBox Grid.Column="0" Grid.Row="1" Text="{Binding ftpAddress}" IsEnabled="{Binding ftpLoaded}"/>
-                <Button Grid.Column="1" Grid.Row="1" Margin="10 0 0 0" Content="Re_load" Command="{Binding ftpClick}" IsEnabled="{Binding ftpLoaded}"/>
-                <TextBlock Grid.Column="2" Grid.Row="1" VerticalAlignment="Center" Foreground="Red" Margin="15 0 0 0" Text="{Binding ftpError}"/>
+                <TextBox Grid.Column="0" Grid.Row="1" Text="{Binding FtpAddress}" IsEnabled="{Binding FtpLoaded}"/>
+                <Button Grid.Column="1" Grid.Row="1" Margin="10 0 0 0" Content="Re_load" Command="{Binding FtpClick}" IsEnabled="{Binding FtpLoaded}"/>
+                <TextBlock Grid.Column="2" Grid.Row="1" VerticalAlignment="Center" Foreground="Red" Margin="15 0 0 0" Text="{Binding FtpError}"/>
 
                 <TextBlock Grid.Column="4" Grid.Row="0" FontWeight="Bold" Text="AC Cars Path"/>
-                <TextBox Grid.Column="4" Grid.Row="1" Grid.RowSpan="2" Text="{Binding acPath}"
+                <TextBox Grid.Column="4" Grid.Row="1" Grid.RowSpan="2" Text="{Binding AcPath}"
                         VerticalScrollBarVisibility="Disabled"
                         HorizontalScrollBarVisibility="Auto"
                         VerticalAlignment="Top"
                         MinHeight="20"
                         />
-                <Button Grid.Column="5" Grid.Row="1" Margin="10 0 0 0" Content="_Find" Command="{Binding findClick}"/>
+                <Button Grid.Column="5" Grid.Row="1" Margin="10 0 0 0" Content="_Find" Command="{Binding FindClick}"/>
 
-                <Button Grid.Column="5" Grid.Row="2" Margin="10 10 0 0" Content="_Upload" Command="{Binding uploadClick}" IsEnabled="{Binding ftpLoaded}"/>
+                <Button Grid.Column="5" Grid.Row="2" Margin="10 10 0 0" Content="_Upload" Command="{Binding UploadClick}" IsEnabled="{Binding FtpLoaded}"/>
             </Grid>
-            <Grid DockPanel.Dock="Top" HorizontalAlignment="Left" Margin="0 5 0 0">
+            <Grid DockPanel.Dock="Top" Margin="0 7 0 0">
                 <Grid.RowDefinitions>
                     <RowDefinition/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition />
+                    <ColumnDefinition Width="*" MinWidth="150"/>
+                    <ColumnDefinition Width="90"/>
+                    <ColumnDefinition Width="0.5*" MinWidth="100"/>
+                    <ColumnDefinition Width="1.5*"/>
+                    <ColumnDefinition Width="80"/>
                 </Grid.ColumnDefinitions>
                 <TextBlock Grid.Column="0" Grid.Row="0" FontWeight="Bold" Text="Sync"/>
-                <ListBox Grid.Column="0" Grid.Row="1" ItemsSource="{Binding options}" MinHeight="30" MinWidth="150">
+                <ListBox Grid.Column="0" Grid.Row="1" ItemsSource="{Binding Options}" MinHeight="40" MinWidth="150">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <StackPanel>
-                                <CheckBox Content="{Binding name}" IsChecked="{Binding isChecked}"/>
+                                <CheckBox Content="{Binding Name}" IsChecked="{Binding IsChecked}"/>
                             </StackPanel>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
                 </ListBox>
-
+                <TextBlock Grid.Column="3" Grid.Row="0" FontWeight="Bold" Text="Excluded Skins"/>
+                <TextBox Grid.Column="3" Grid.Row="1" Grid.ColumnSpan="2" Text="{Binding ExclusionString}"
+                        VerticalScrollBarVisibility="Disabled"
+                        HorizontalScrollBarVisibility="Auto"
+                        VerticalAlignment="Top"
+                        MinHeight="20"
+                        />
             </Grid>
 
             <Grid DockPanel.Dock="Bottom">
@@ -86,19 +96,19 @@
                     <ColumnDefinition Width="73"/>
                 </Grid.ColumnDefinitions>
                 <TextBlock Grid.Column="0" Text="Skins to Update:" />
-                <TextBlock Grid.Column="1" Text="{Binding skins}" FontFamily="Consolas" Padding="0 1.5  0 0"/>
+                <TextBlock Grid.Column="1" Text="{Binding Skins}" FontFamily="Consolas" Padding="0 1.5  0 0"/>
 
                 <TextBlock Grid.Column="3" Text="Files to Download:"/>
-                <TextBlock Grid.Column="4" Text="{Binding files}" FontFamily="Consolas" Padding="5 1.5 0 0"/>
+                <TextBlock Grid.Column="4" Text="{Binding Files}" FontFamily="Consolas" Padding="5 1.5 0 0"/>
 
                 <TextBlock Grid.Column="6" Text="Total Size Remaining:"/>
-                <TextBlock Grid.Column="7" Text="{Binding size}" FontFamily="Consolas" Padding="5 1.5 0 0"/>
+                <TextBlock Grid.Column="7" Text="{Binding Size}" FontFamily="Consolas" Padding="5 1.5 0 0"/>
 
-                <Button Grid.Column="9" Grid.Row="1" Margin="10 0 0 0" Content="{Binding analysisText}" Command="{Binding analyseClick}"/>
-                <Button Grid.Column="10" Grid.Row="1" Margin="3 0 0 0" Content="{Binding runText}" Command="{Binding runClick}"/>
+                <Button Grid.Column="9" Grid.Row="1" Margin="10 0 0 0" Content="{Binding AnalysisText}" Command="{Binding AnalyseClick}"/>
+                <Button Grid.Column="10" Grid.Row="1" Margin="3 0 0 0" Content="{Binding RunText}" Command="{Binding RunClick}"/>
             </Grid>
 
-            <Grid Margin="0 10">
+            <Grid Margin="0 7">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto"/>
                     <RowDefinition/>
@@ -109,7 +119,7 @@
                 </Grid.ColumnDefinitions>
                 <TextBlock Grid.Row="0" FontWeight="Bold" Text="Output"/>
                 <!-- <CheckBox Grid.Row="0" Grid.Column="1" Content="AutoScroll" HorizontalAlignment="Right"/>  -->
-                <local:ScrollingTextBox Grid.Row="1" Grid.ColumnSpan="2" IsReadOnly="True" VerticalScrollBarVisibility="Visible" FontFamily="Consolas" TextWrapping="Wrap" Margin="0 2 0 0" Text="{Binding log, UpdateSourceTrigger=PropertyChanged}"/>
+                <local:ScrollingTextBox Grid.Row="1" Grid.ColumnSpan="2" IsReadOnly="True" VerticalScrollBarVisibility="Visible" FontFamily="Consolas" TextWrapping="Wrap" Margin="0 2 0 0" Text="{Binding Log, UpdateSourceTrigger=PropertyChanged}"/>
             </Grid>
         </DockPanel>
 
