--- a/AcrlSync/DownloadView.xaml
+++ b/AcrlSync/DownloadView.xaml
@@ -17,11 +17,12 @@
             </Style.Triggers>
         </Style>
     </UserControl.Style>
-
     <Grid x:Name="LayoutRoot">
         <DockPanel LastChildFill="True" Margin="15 10">
             <Grid DockPanel.Dock="Top">
                 <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
                     <RowDefinition/>
                     <RowDefinition/>
                     <RowDefinition/>
@@ -46,9 +47,16 @@
                         VerticalAlignment="Top"
                         MinHeight="20"
                         />
-                <Button Grid.Column="5" Grid.Row="1" Margin="10 0 0 0" Content="_Find" Command="{Binding FindClick}"/>
-
-                <Button Grid.Column="5" Grid.Row="2" Margin="10 10 0 0" Content="_Upload" Command="{Binding UploadClick}" IsEnabled="{Binding FtpLoaded}"/>
+                <Button Grid.Column="5" Grid.Row="1" Margin="10 0 0 0" Content="_Find" Command="{Binding FindAcClick}"/>
+                
+                <TextBlock Grid.Column="4" Grid.Row="2" FontWeight="Bold" Text="ACC Cars Path"/>
+                <TextBox Grid.Column="4" Grid.Row="3" Grid.RowSpan="2" Text="{Binding AccPath}"
+                        VerticalScrollBarVisibility="Disabled"
+                        HorizontalScrollBarVisibility="Auto"
+                        VerticalAlignment="Top"
+                        MinHeight="20"
+                        />
+                <Button Grid.Column="5" Grid.Row="3" Margin="10 0 0 0" Content="_Find" Command="{Binding FindAccClick}"/>
             </Grid>
             <Grid DockPanel.Dock="Top" Margin="0 7 0 0">
                 <Grid.RowDefinitions>
