--- a/AcrlSync/DownloadView.xaml
+++ b/AcrlSync/DownloadView.xaml
@@ -41,7 +41,7 @@
                 <TextBlock Grid.Column="2" Grid.Row="1" VerticalAlignment="Center" Foreground="Red" Margin="15 0 0 0" Text="{Binding FtpError}"/>
 
                 <TextBlock Grid.Column="4" Grid.Row="0" FontWeight="Bold" Text="AC Cars Path"/>
-                <TextBox Grid.Column="4" Grid.Row="1" Grid.RowSpan="2" Text="{Binding AcPath}"
+                <TextBox Grid.Column="4" Grid.Row="1" Grid.RowSpan="2" Text="{Binding ACPath}"
                         VerticalScrollBarVisibility="Disabled"
                         HorizontalScrollBarVisibility="Auto"
                         VerticalAlignment="Top"
@@ -50,7 +50,7 @@
                 <Button Grid.Column="5" Grid.Row="1" Margin="10 0 0 0" Content="_Find" Command="{Binding FindAcClick}"/>
                 
                 <TextBlock Grid.Column="4" Grid.Row="2" FontWeight="Bold" Text="ACC Cars Path"/>
-                <TextBox Grid.Column="4" Grid.Row="3" Grid.RowSpan="2" Text="{Binding AccPath}"
+                <TextBox Grid.Column="4" Grid.Row="3" Grid.RowSpan="2" Text="{Binding ACCPath}"
                         VerticalScrollBarVisibility="Disabled"
                         HorizontalScrollBarVisibility="Auto"
                         VerticalAlignment="Top"
